# ChangeLog for sci-biology/trinityrnaseq
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  05 Jan 2016; Marius Brehler <marbre@linux.sungazer.de>
  trinityrnaseq-2.0.6.ebuild:
  sci-biology/trinityrnaseq: Drop KEYWORDS (depends on masked package)

  31 Dec 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  trinityrnaseq-2.0.6.ebuild, trinityrnaseq-2.1.1.ebuild:
  sci-biology/trinityrnaseq: do not install bundled GAL but DEPEND on it via
  external package as sci-biology/GAL

*trinityrnaseq-2.1.1 (20 Nov 2015)

  20 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +files/disable_some_plugins.patch, +trinityrnaseq-2.1.1.ebuild:
  sci-biology/trinityrnaseq: version bump but dropping KEYWORDS because we
  relocate *.pm file into vendor_perl and all 'use blah' calls to trinity-
  provided perl modules need to be changed to 'use trinityrnaseq::blah', or
  PERL5INC modified?

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-biology/trinityrnaseq: Add github to remote-id in metadata.xml

  02 May 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  trinityrnaseq-2.0.6.ebuild:
  sci-biology/trinityrnaseq: added missing quotes

  30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  trinityrnaseq-2.0.6.ebuild:
  sci-biology/trinityrnaseq: added a note and removed broken symlink upon
  installation

*trinityrnaseq-2.0.6 (30 Apr 2015)

  30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +trinityrnaseq-2.0.6.ebuild, -files/r3590_chmod.patch, -files/sort.patch,
  -trinityrnaseq-20140413.ebuild:
  sci-biology/trinityrnaseq: version bump; dropped patches because target file
  is gone; ideally should depend on <sci-biology/samtools-1.1 but lets see what
  are the real requirements

*trinityrnaseq-20140413 (30 Apr 2015)

  30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +files/r3590_chmod.patch, +files/sort.patch, +metadata.xml,
  +trinityrnaseq-20140413.ebuild: