@@ -1,4 +1,4 @@
-# Copyright 1999-2015 Gentoo Foundation
+# Copyright 1999-2016 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Id$
 
@@ -57,7 +57,7 @@ src_install(){
 	doins -r util/*
 	#
 	dobin Inchworm/bin/*
-	cd Chrysalis
+	cd Chrysalis  || die
 	dobin MakeDepend checkLock BreakTransByPairs Chrysalis GraphFromFasta IsoformAugment JoinTransByPairs QuantifyGraph ReadsToTranscripts RunButterfly TranscriptomeFromVaryK analysis/ReadsToComponents.pl
 	cd "${S}" || die
 	insinto "${VENDOR_LIB}/${PN}"
